# pptna

./: .env.example  .gitignore  AUTO_FALLBACK_SUMMARY.md  LICENSE  README.md  SECURITY.md  TEST_GUIDE.md  TWO_STAGE_GENERATION.md  app.py  calc_tokens.py  check_status.bat  create_code_only_package.js  create_code_package.bat  create_code_package.ps1  create_release_package.js  create_release_package.ps1  install_task.ps1  log_monitor.ps1  main.py  makezip.ps1  monitor_logs.bat  package-lock.json  package.bat  pyproject.toml  query  requirements.txt  run.py  server_config.json  service_manager.bat  start_service.bat  stop_service.bat  test_all_models.py  watchdog.ps1  windows_service.py  功能说明书.md
.claude/: settings.local.json
static/: results_style.css  style.css
templates/: index.html  results copy.html  results.html
