[project]
name = "ppt-narrator-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.12.1",
    "bcrypt>=5.0.0",
    "certifi>=2026.2.25",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.6",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "cryptography>=46.0.5",
    "distro>=1.9.0",
    "flask>=3.1.3",
    "google-generativeai>=0.8.6",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.11",
    "imagehash>=4.3.2",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "markupsafe>=3.0.3",
    "numpy>=2.4.3",
    "openai>=2.29.0",
    "pillow>=12.1.1",
    "pyasn1>=0.6.3",
    "pyasn1-modules>=0.4.2",
    "pycparser>=3.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pymupdf>=1.27.2",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "pywin32>=311",
    "requests>=2.32.5",
    "rsa>=4.9.1",
    "scipy>=1.17.1",
    "sniffio>=1.3.1",
    "tqdm>=4.67.3",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "urllib3>=2.6.3",
    "waitress>=3.0.2",
    "xlsxwriter>=3.2.9",
]
